fixed issue with wrong font, font was showing as I had it installed on my other mac

--- a/web-template/public/css/home.css
+++ b/web-template/public/css/home.css
@@ -22,7 +22,7 @@
 }
 
 @font-face {
-	font-family: GraublauWeb;
+	font-family: StencilStd;
 	src: url("../font/StencilStd.otf") format("opentype");
 }
 
